# JoyStickOrtho

./: CMakeLists.txt  Makefile  README.md  contract.md  joystick  joystick_config.cfg  joystick_template.csv  main.cpp
desktop/joystick-visualizer/: CMakeLists.txt  Makefile  README.md  joystick_config.cfg  main.cpp
desktop/joystick-visualizer/include/: DeveloperPanel.hpp  PointNormalizer.hpp  SplineRenderer.hpp
desktop/joystick-visualizer/src/: AppConfig.cpp  PointNormalizer.cpp  SplineRenderer.cpp
firmware/esp32-s3/: README.md
firmware/xiao-esp32c6-web/: README.md  xiao_esp32c6_web.ino
include/: AppConfig.hpp  DeveloperPanel.hpp  PacketParser.hpp  PointNormalizer.hpp  SerialPort.hpp  SplineRenderer.hpp  TemplateStorage.hpp
src/: AppConfig.cpp  DeveloperPanel.cpp  PacketParser.cpp  PointNormalizer.cpp  SerialPort.cpp  SplineRenderer.cpp  TemplateStorage.cpp
